c/src/test/resources/c/nec_inline_bnc/valid/ex31-7.ctrl
<controlFile>
  <sourceFile name="../ex31.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <wayPoint fileId="1" line="6" >
      <loop iterTimes="3" >
        <wayPoint fileId="1" line="9" />
      </loop>
    </wayPoint>
    <wayPoint fileId="1" line="6" >
      <loop iterTimes="4" >
        <wayPoint fileId="1" line="11" />
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="14" />
  </run>
</controlFile>