c/src/test/resources/c/nec_inline_bnc/invalid/ex4-10.ctrl
<controlFile>
  <sourceFile name="../ex4.c" id="1" />
  <run>
    <startPosition fileId="1" line="9" />
    <wayPoint fileId="1" line="11" >
      <loop iterTimes="10" />
    </wayPoint>
    <wayPoint fileId="1" line="13" >
      <loop iterTimes="10" />
    </wayPoint>
    <endPosition fileId="1" line="15" />
  </run>
</controlFile>